# project-pi-ota

./: .gitignore  CMakeLists.txt  VERSION  prj.conf  udp.conf
boards/: rpi_pico2_rp2350a_m33_w_mcuboot.overlay
scripts/: check.py  push_firmware.py
src/: dfu_hooks.c  dfu_hooks.h  main.c
